--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "A very simple Sequelize plugin which adds no update and readonly attributes support.",
   "main": "lib/index.js",
+  "source": "src/index.js",
+  "types": "lib/index.d.ts",
   "keywords": [
     "sequelize",
     "noupdate",
@@ -13,10 +15,20 @@
     "only",
     "attributes"
   ],
+  "dependencies": {
+    "sequelize": "^6.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@tsconfig/node16": "^1.0.2",
+    "@types/chance": "^1.1.3",
+    "@types/factory-girl": "^5.0.8",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^27.5.1",
+    "babel": "^6.23.0",
     "babel-jest": "^26.3.0",
+    "chance": "^1.1.8",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.12.0",
@@ -24,8 +36,11 @@
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "factory-girl": "^5.0.4",
+    "faker": "^5.1.0",
     "jest": "^26.4.2",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "sqlite3": "^5.0.0",
+    "typescript": "^4.7.2"
   },
   "homepage": "https://github.com/diosney/node-sequelize-noupdate-attributes",
   "bugs": {
@@ -41,12 +56,7 @@
     "url": "https://github.com/diosney/node-sequelize-noupdate-attributes.git"
   },
   "scripts": {
-    "test": "jest"
-  },
-  "dependencies": {
-    "babel": "^6.23.0",
-    "faker": "^5.1.0",
-    "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0"
+    "test": "tsc; jest",
+    "build": "tsc -p ./tsconfig.build.json"
   }
 }
