--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "source": "src/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "tsc; jest",
+    "test": "tsc; jest --coverage",
     "build": "tsc -p ./tsconfig.build.json"
   },
   "keywords": [
